Fix horizontal scrollbar in new baseline modal
Part of epic #12142 Baseline v1

This scrollbar is visible when a tooltip used in a modal
exceed this modal.

--- a/themes/BurningParrot/baseline/_baseline.scss
+++ b/themes/BurningParrot/baseline/_baseline.scss
@@ -18,7 +18,7 @@
  */
 
 .new-baseline-modal {
-    width: 26rem;
+    width: 27rem;
 }
 
 .baseline-section-new-baseline-button {
